# Cortex

./: LICENSE  Makefile  README.md  RUNBOOK.md  corpus_bancario_completo.jsonl  hf_scan_results.json  pii_test_corpus.jsonl  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  ci_full_e2e_demo.yml  ci_full_e2e_demo_v2.yml  ci_roles_demo.yml
docker/: Dockerfile.api
docs/: CHANGELOG.md  DEMO_FULL_E2E_REAL.md  INSTALL.md  analysis_base.md  architecture.md  compliance.md  deployment_banking.md  runbook.md  security.md
docs/adr/: 0001-qdrant-choice.md  0002-local-embeddings.md  0003-fake-llm-in-tests.md  0004-observability-and-tracing.md  0005-security-and-provider-strategy.md  0006-model-selection.md  README.md
docs/diagrams/: README.md
docs/diagrams/grafana/: api-overview.json
src/cortex_ka/: config.py  logging.py
src/cortex_ka/api/: main.py
src/cortex_ka/application/: metrics.py  pii_classifier.py  prompt_builder.py  rag_service.py
src/cortex_ka/domain/: models.py  ports.py
tests/: test_api.py  test_api_security.py  test_banking_corpus_ingest_and_rag.py  test_client_id_access_control.py  test_e2e_hf.py  test_health_and_cors.py  test_ingest_and_retrieve_success.py  test_ingest_pii_classification.py  test_ingestion_chunker.py  test_llm_error.py  test_metrics.py  test_pii_classifier_and_config.py  test_pii_evaluator.py  test_prompt_builder.py  test_prompt_injection.py  test_prompt_injection_api.py  test_qdrant_error.py  test_qdrant_retriever.py  test_qdrant_retriever_pii_filtering.py  test_rag_service.py  test_rate_limiter.py  test_rate_limiter_keyed.py  test_security_headers.py  test_streaming.py
(+13 files in other folders)
