[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-knowledge-assistant"
version = "0.1.5"
description = "Corporate-grade RAG assistant for internal documentation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Cortex Knowledge Assistant Authors"}
]
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-ollama>=0.1.0",
  "qdrant-client>=1.9.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "orjson>=3.9.15",
  "structlog>=24.1.0",
  "sentence-transformers>=2.5.1",
  "prometheus-client>=0.20.0"
  ,"opentelemetry-api>=1.25.0"
  ,"opentelemetry-sdk>=1.25.0"
  ,"opentelemetry-instrumentation-fastapi>=0.50b0"
  ,"opentelemetry-exporter-otlp>=1.25.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "flake8>=7.0.0",
  "pylint>=3.2.0",
  "black>=24.4.0",
  "isort>=5.13.0",
  "mypy>=1.10.0",
  "pip-audit>=2.7.0",
  "types-redis",
  "types-requests"
]
perf = [
  "tiktoken>=0.8.0"
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
max-complexity = 20

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
